temporarily fix issue of 2 column rows from 3 if the screen is too wide

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
   margin-bottom: 1rem;
 }
